fix: remove kickstart file upload limits

--- a/profiles/default/systems/ui/static/index.html
+++ b/profiles/default/systems/ui/static/index.html
@@ -1069,10 +1069,10 @@
                             <div class="dropzone-content">
                                 <div class="dropzone-icon">◇</div>
                                 <div class="dropzone-text">Drop files here or click to browse</div>
-                                <div class="dropzone-hint">Code, docs, images, data & config files — max 2MB each</div>
+                                <div class="dropzone-hint">Any file type and size</div>
                             </div>
                         </div>
-                        <input type="file" id="kickstart-file-input" style="display: none;" multiple accept=".md,.txt,.pdf,.rtf,.json,.yaml,.yml,.toml,.xml,.csv,.tsv,.ini,.env,.properties,.cfg,.conf,.html,.css,.scss,.less,.svg,.js,.ts,.tsx,.jsx,.py,.cs,.java,.go,.rs,.rb,.php,.swift,.kt,.c,.cpp,.h,.hpp,.sh,.ps1,.sql,.r,.lua,.dart,.vue,.svelte,.png,.jpg,.jpeg,.gif,.webp,.ipynb">
+                        <input type="file" id="kickstart-file-input" style="display: none;" multiple>
                         <div id="kickstart-file-list" class="kickstart-file-list"></div>
                     </div>
                     <div class="form-option">
